Remove scrollbar issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+main {
+  min-height: 100vh;
+}
